--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -10090,5 +10090,5 @@
 
         <!-- /e/ specific changes -->
     <string name="micro_g">MicroG</string>
-
+    <string name="open_keychain">OpenKeychain</string>
 </resources>
