--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--  Copyright (C) 2007 The Android Open Source Project
-
+      Copyright (C) 2019 e.foundation
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
      You may obtain a copy of the License at
@@ -2959,7 +2959,7 @@
     <string name="account_dashboard_title" msgid="5895948991491438911">"Konten"</string>
     <string name="account_dashboard_default_summary" msgid="3998347400161811075">"Keine Konten hinzugefügt"</string>
     <string name="app_default_dashboard_title" msgid="7342549305933047317">"Standard-Apps"</string>
-    <string name="system_dashboard_summary" msgid="5797743225249766685">"Sprachen, Zeit, Sicherung und Updates"</string>
+    <string name="system_dashboard_summary" msgid="5797743225249766685">"Sprachen, Zeit und Updates"</string>
     <string name="search_results_title" msgid="1796252422574886932">"Einstellungen"</string>
     <string name="search_menu" msgid="6283419262313758339">"Einstellungen durchsuchen"</string>
     <string name="keywords_wifi" msgid="3646884600964177062">"wlan, wi-fi, netzwerkverbindung, internet, kabellos, daten, wifi, wi-fi, w-lan"</string>
