--- a/res/values-es-rUS/strings.xml
+++ b/res/values-es-rUS/strings.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--  Copyright (C) 2007 The Android Open Source Project
-
+      Copyright (C) 2019 e.foundation
+      
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
      You may obtain a copy of the License at
@@ -2959,7 +2960,7 @@
     <string name="account_dashboard_title" msgid="5895948991491438911">"Cuentas"</string>
     <string name="account_dashboard_default_summary" msgid="3998347400161811075">"No se agregó ninguna cuenta"</string>
     <string name="app_default_dashboard_title" msgid="7342549305933047317">"Apps predeterminadas"</string>
-    <string name="system_dashboard_summary" msgid="5797743225249766685">"Idiomas, hora, copia de seguridad, actualizaciones"</string>
+    <string name="system_dashboard_summary" msgid="5797743225249766685">"Idiomas, hora, actualizaciones"</string>
     <string name="search_results_title" msgid="1796252422574886932">"Configuración"</string>
     <string name="search_menu" msgid="6283419262313758339">"Buscar en la configuración"</string>
     <string name="keywords_wifi" msgid="3646884600964177062">"Wi-Fi, wi-fi, conexión de red, Internet, inalámbrico, datos, wifi"</string>
