--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -4153,4 +4153,16 @@
     <string name="pref_title_network_details" msgid="7186418845727358964">"Détails du réseau"</string>
     <string name="about_phone_device_name_warning" msgid="8885670415541365348">"Le nom de votre appareil est visible par les applications installées sur votre téléphone. Il peut l\'être également par d\'autres personnes en cas de connexion à des appareils Bluetooth ou de configuration d\'un point d\'accès Wi-Fi."</string>
     <string name="devices_title" msgid="7701726109334110391">"Appareils"</string>
+    
+    
+    <!-- /e/ -->
+    <string name="e_dns_settings_title">"Settings DNS"</string>
+    <string name="e_dns_mode">"DNS"</string>
+    <string name="e_dns_name">"DNS"</string>
+    <string name="e_dns_title">"Entrez l'IP du DNS"</string>
+    <string name="e_use_dhcp_dns">"Utiliser le DNS du réseau"</string>
+    <string name="e_use_dhcp_dns_summary">"Permet d'utiliser le serveur DNS fourni par le réseau"</string>
+    <string name="e_dns_name_summary">"Définissez le DNS à utiliser"</string>
+    <string name="e_dns_not_set">"9.9.9.9"</string>
+    <string name="e_dns_summary">"Configuration du DNS"</string>
 </resources>
