Add MicroG to Settings
Change-Id: If88e1620282b50bfe0c44a59197e9768fc284e12

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -10087,4 +10087,8 @@
 
     <!-- Title for Connected device shortcut [CHAR LIMIT=30] -->
     <string name="devices_title">Devices</string>
+
+        <!-- /e/ specific changes -->
+    <string name="micro_g">MicroG</string>
+
 </resources>
