Creation of the account remote storage view

--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -3736,7 +3736,8 @@
     <string name="e_dns_name_summary">"Définissez le DNS à utiliser"</string>
     <string name="e_dns_not_set">"9.9.9.9"</string>
     <string name="e_dns_summary">"Configuration du DNS"</string>
-
+    <string name="e_increase_storage_size">"Augmenter l'espace de stockage"</string>
+    <string name="e_used_space">"Espace de stockage utilisé : %1$d%% (%2$s/%3$s)"</string>
 
 
 
