--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -9071,5 +9071,6 @@
     <string name="e_dns_name_summary">"Set DNS to use"</string>
     <string name="e_dns_not_set">"9.9.9.9"</string>
     <string name="e_dns_summary">"DNS configuration"</string>
-
+    <string name="e_increase_storage_size">"Increase storage size"</string>
+    <string name="e_used_space">"Used storage space : %1$d%% (%2$s/%3$s)"</string>
 </resources>
