Added FollowNSULinkRemoteOperation + AccoutRemoteStoragePreferenceController

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -9073,4 +9073,5 @@
     <string name="e_dns_summary">"DNS configuration"</string>
     <string name="e_increase_storage_size">"Increase storage size"</string>
     <string name="e_used_space">"Used storage space : %1$d%% (%2$s/%3$s)"</string>
+    <string name="e_ecloud_server_uri">https://ecloud.global</string>
 </resources>
